// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTrackRenderer > レンダリングイベントが正しく発行される 1`] = `
{
  "renderingEventInfos": [
    {
      "phraseInfos": Map {
        "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000002",
              "lyric": "て",
              "noteNumber": 60,
              "position": 1920,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000003",
              "lyric": "す",
              "noteNumber": 62,
              "position": 2400,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000004",
              "lyric": "と",
              "noteNumber": 64,
              "position": 2880,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 1.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000005",
              "lyric": "い",
              "noteNumber": 60,
              "position": 3840,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000006",
              "lyric": "ち",
              "noteNumber": 60,
              "position": 4320,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 3.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000007",
              "lyric": "に",
              "noteNumber": 62,
              "position": 5280,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
      },
      "type": "phrasesGenerated",
    },
    {
      "phraseInfos": Map {
        "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000002",
              "lyric": "て",
              "noteNumber": 60,
              "position": 1920,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000003",
              "lyric": "す",
              "noteNumber": 62,
              "position": 2400,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000004",
              "lyric": "と",
              "noteNumber": 64,
              "position": 2880,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 1.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000005",
              "lyric": "い",
              "noteNumber": 60,
              "position": 3840,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000006",
              "lyric": "ち",
              "noteNumber": 60,
              "position": 4320,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 3.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000007",
              "lyric": "に",
              "noteNumber": 62,
              "position": 5280,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
      },
      "type": "cacheLoaded",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "queryHash": "d76d0e815c82f9d4aac85aa687237d1fc2afe9b71b55776e6d40a98e51e9fd0b",
      "queryKey": "e27d3962843c012dbb8c452040417dbf63052ed9b4465960374fdd774771c550",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "singingPitchHash": "dc17d06083ff4c229423f887e468f5a79067b69afd2be0dcf8b9d3ad59615f9a",
      "singingPitchKey": "11a43b72bb762b9ad93df3f366142e85fad499fb99a03acfe6a73487a510472b",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "singingVolumeHash": "a1352056a5460da04ef7233dfbd90974be1b6a3a8077c39eb5bf4085a388f773",
      "singingVolumeKey": "571a27460ff1e747a776f5650f146f4ffe2893d57776fb62ac340c28b0f5a824",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "singingVoiceHash": "2822852f5df5afa8e86269a85e6cb87ec41aa031b7049b5c4799ba965374e536",
      "singingVoiceKey": "d77fb827e61e5c667f7411277523a090bd7f01f94b6702a3896138f8f940858c",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000002",
            "lyric": "て",
            "noteNumber": 60,
            "position": 1920,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000003",
            "lyric": "す",
            "noteNumber": 62,
            "position": 2400,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000004",
            "lyric": "と",
            "noteNumber": 64,
            "position": 2880,
          },
        ],
        "queryHash": "d76d0e815c82f9d4aac85aa687237d1fc2afe9b71b55776e6d40a98e51e9fd0b",
        "queryKey": "e27d3962843c012dbb8c452040417dbf63052ed9b4465960374fdd774771c550",
        "singingPitchHash": "dc17d06083ff4c229423f887e468f5a79067b69afd2be0dcf8b9d3ad59615f9a",
        "singingPitchKey": "11a43b72bb762b9ad93df3f366142e85fad499fb99a03acfe6a73487a510472b",
        "singingVoiceHash": "2822852f5df5afa8e86269a85e6cb87ec41aa031b7049b5c4799ba965374e536",
        "singingVoiceKey": "d77fb827e61e5c667f7411277523a090bd7f01f94b6702a3896138f8f940858c",
        "singingVolumeHash": "a1352056a5460da04ef7233dfbd90974be1b6a3a8077c39eb5bf4085a388f773",
        "singingVolumeKey": "571a27460ff1e747a776f5650f146f4ffe2893d57776fb62ac340c28b0f5a824",
        "startTime": 1.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "type": "phraseRenderingComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "queryHash": "cd3fc546977dc9ac53bea662cd76204e2fe13951ecb4271071618dccfc0dd0f5",
      "queryKey": "ff245a221cb619ee7585a7da78b298ecceb7d69e399b56302ffee5289d0facb2",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "singingPitchHash": "be21c3765a7711d97b27e89dbd6c78935900e62d0f75768745c4162ef893ead1",
      "singingPitchKey": "d96c730986f1bfa2936d492d33da872f3c5bde8c47f4ad450e6a7e5d2e9c9e07",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "singingVolumeHash": "76a6243c3d0c99dc1150e19c095de9eddb5d4bae813c34eeee8f515cb6369784",
      "singingVolumeKey": "c9f73ebb0ba177d7236af27c9522f19eeb0485a16852da2fe909e0115dc6f199",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "singingVoiceHash": "2a61a307f5fd84f01b80c554183f878f3b7ee223c07174cf5d9867a99538e09d",
      "singingVoiceKey": "976dcd047fd4aaaaaf99b121f67bfd9645227223feb689b952d54040ee705a68",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000005",
            "lyric": "い",
            "noteNumber": 60,
            "position": 3840,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000006",
            "lyric": "ち",
            "noteNumber": 60,
            "position": 4320,
          },
        ],
        "queryHash": "cd3fc546977dc9ac53bea662cd76204e2fe13951ecb4271071618dccfc0dd0f5",
        "queryKey": "ff245a221cb619ee7585a7da78b298ecceb7d69e399b56302ffee5289d0facb2",
        "singingPitchHash": "be21c3765a7711d97b27e89dbd6c78935900e62d0f75768745c4162ef893ead1",
        "singingPitchKey": "d96c730986f1bfa2936d492d33da872f3c5bde8c47f4ad450e6a7e5d2e9c9e07",
        "singingVoiceHash": "2a61a307f5fd84f01b80c554183f878f3b7ee223c07174cf5d9867a99538e09d",
        "singingVoiceKey": "976dcd047fd4aaaaaf99b121f67bfd9645227223feb689b952d54040ee705a68",
        "singingVolumeHash": "76a6243c3d0c99dc1150e19c095de9eddb5d4bae813c34eeee8f515cb6369784",
        "singingVolumeKey": "c9f73ebb0ba177d7236af27c9522f19eeb0485a16852da2fe909e0115dc6f199",
        "startTime": 3.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "type": "phraseRenderingComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "queryHash": "91f275c1b4dd6f9369aeb8ac1e8a72710db142660cfabe8224bbb750a758ac05",
      "queryKey": "3778275a33dbc32084b47247d9ffef6ffafc9246c45fc98bab616df7fdbf651a",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "singingPitchHash": "9685ad00df73de54b54c2af62228a89c0d0f5be023452742fefe77e5acd1522d",
      "singingPitchKey": "d9c7fd1bb48246874693257ca225bf426a8d67e5a318a9b9246ac3176bf5637f",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "singingVolumeHash": "900d0c30613be694043d30e7a0fc250be2e3c62332c2ab9541501e5b2f08efad",
      "singingVolumeKey": "862661ef5cf7847a643e2245d2ef17a000535f49012041348f70e9c6525255fa",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "singingVoiceHash": "799b2ee4a550514b0d919008ec17c7784d3e23ddddc8fe45e71ef9ec0b3fa86f",
      "singingVoiceKey": "b7bdce5d730e526252c089d2197303cf7964d580e3a96e7e32b602f36ed61f7c",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000007",
            "lyric": "に",
            "noteNumber": 62,
            "position": 5280,
          },
        ],
        "queryHash": "91f275c1b4dd6f9369aeb8ac1e8a72710db142660cfabe8224bbb750a758ac05",
        "queryKey": "3778275a33dbc32084b47247d9ffef6ffafc9246c45fc98bab616df7fdbf651a",
        "singingPitchHash": "9685ad00df73de54b54c2af62228a89c0d0f5be023452742fefe77e5acd1522d",
        "singingPitchKey": "d9c7fd1bb48246874693257ca225bf426a8d67e5a318a9b9246ac3176bf5637f",
        "singingVoiceHash": "799b2ee4a550514b0d919008ec17c7784d3e23ddddc8fe45e71ef9ec0b3fa86f",
        "singingVoiceKey": "b7bdce5d730e526252c089d2197303cf7964d580e3a96e7e32b602f36ed61f7c",
        "singingVolumeHash": "900d0c30613be694043d30e7a0fc250be2e3c62332c2ab9541501e5b2f08efad",
        "singingVolumeKey": "862661ef5cf7847a643e2245d2ef17a000535f49012041348f70e9c6525255fa",
        "startTime": 5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "type": "phraseRenderingComplete",
    },
  ],
}
`;

exports[`SongTrackRenderer > 正しいレンダリング結果が返される 1`] = `
{
  "renderingResultInfo": {
    "phraseInfos": Map {
      "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000002",
            "lyric": "て",
            "noteNumber": 60,
            "position": 1920,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000003",
            "lyric": "す",
            "noteNumber": 62,
            "position": 2400,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000004",
            "lyric": "と",
            "noteNumber": 64,
            "position": 2880,
          },
        ],
        "queryHash": "d76d0e815c82f9d4aac85aa687237d1fc2afe9b71b55776e6d40a98e51e9fd0b",
        "queryKey": "e27d3962843c012dbb8c452040417dbf63052ed9b4465960374fdd774771c550",
        "singingPitchHash": "dc17d06083ff4c229423f887e468f5a79067b69afd2be0dcf8b9d3ad59615f9a",
        "singingPitchKey": "11a43b72bb762b9ad93df3f366142e85fad499fb99a03acfe6a73487a510472b",
        "singingVoiceHash": "2822852f5df5afa8e86269a85e6cb87ec41aa031b7049b5c4799ba965374e536",
        "singingVoiceKey": "d77fb827e61e5c667f7411277523a090bd7f01f94b6702a3896138f8f940858c",
        "singingVolumeHash": "a1352056a5460da04ef7233dfbd90974be1b6a3a8077c39eb5bf4085a388f773",
        "singingVolumeKey": "571a27460ff1e747a776f5650f146f4ffe2893d57776fb62ac340c28b0f5a824",
        "startTime": 1.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000005",
            "lyric": "い",
            "noteNumber": 60,
            "position": 3840,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000006",
            "lyric": "ち",
            "noteNumber": 60,
            "position": 4320,
          },
        ],
        "queryHash": "cd3fc546977dc9ac53bea662cd76204e2fe13951ecb4271071618dccfc0dd0f5",
        "queryKey": "ff245a221cb619ee7585a7da78b298ecceb7d69e399b56302ffee5289d0facb2",
        "singingPitchHash": "be21c3765a7711d97b27e89dbd6c78935900e62d0f75768745c4162ef893ead1",
        "singingPitchKey": "d96c730986f1bfa2936d492d33da872f3c5bde8c47f4ad450e6a7e5d2e9c9e07",
        "singingVoiceHash": "2a61a307f5fd84f01b80c554183f878f3b7ee223c07174cf5d9867a99538e09d",
        "singingVoiceKey": "976dcd047fd4aaaaaf99b121f67bfd9645227223feb689b952d54040ee705a68",
        "singingVolumeHash": "76a6243c3d0c99dc1150e19c095de9eddb5d4bae813c34eeee8f515cb6369784",
        "singingVolumeKey": "c9f73ebb0ba177d7236af27c9522f19eeb0485a16852da2fe909e0115dc6f199",
        "startTime": 3.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000007",
            "lyric": "に",
            "noteNumber": 62,
            "position": 5280,
          },
        ],
        "queryHash": "91f275c1b4dd6f9369aeb8ac1e8a72710db142660cfabe8224bbb750a758ac05",
        "queryKey": "3778275a33dbc32084b47247d9ffef6ffafc9246c45fc98bab616df7fdbf651a",
        "singingPitchHash": "9685ad00df73de54b54c2af62228a89c0d0f5be023452742fefe77e5acd1522d",
        "singingPitchKey": "d9c7fd1bb48246874693257ca225bf426a8d67e5a318a9b9246ac3176bf5637f",
        "singingVoiceHash": "799b2ee4a550514b0d919008ec17c7784d3e23ddddc8fe45e71ef9ec0b3fa86f",
        "singingVoiceKey": "b7bdce5d730e526252c089d2197303cf7964d580e3a96e7e32b602f36ed61f7c",
        "singingVolumeHash": "900d0c30613be694043d30e7a0fc250be2e3c62332c2ab9541501e5b2f08efad",
        "singingVolumeKey": "862661ef5cf7847a643e2245d2ef17a000535f49012041348f70e9c6525255fa",
        "startTime": 5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
    },
    "type": "complete",
  },
}
`;
